@@ -17,6 +17,7 @@ import java.text.DecimalFormat;
 
 import edu.colorado.phet.common.phetcommon.math.Function.LinearFunction;
 import edu.colorado.phet.common.phetcommon.resources.PhetResources;
+import edu.colorado.phet.common.phetcommon.simsharing.SimSharingEventArgs;
 import edu.colorado.phet.common.phetcommon.util.function.Function0;
 import edu.colorado.phet.common.phetcommon.util.function.VoidFunction1;
 import edu.colorado.phet.common.phetcommon.view.graphics.transforms.ModelViewTransform;
@@ -459,7 +460,7 @@ public class ConductivityTesterNode extends PhetPNode {
         private Point2D.Double relativeGrabPoint; // where the mouse grabbed relative to the probe, in view coordinates
 
         ProbeDragHandler( String simSharingObject, ModelViewTransform transform, ProbeNode probeNode, Function0<Point2D> getModelLocation, VoidFunction1<Point2D> setModelLocation ) {
-            super( simSharingObject );
+            setSimSharingEventArgs( new SimSharingEventArgs( simSharingObject ) );
             this.transform = transform;
             this.probeNode = probeNode;
             this.getModelLocation = getModelLocation;
