@@ -19,6 +19,7 @@ import javax.swing.WindowConstants;
 import edu.colorado.phet.common.phetcommon.math.Function.LinearFunction;
 import edu.colorado.phet.common.phetcommon.math.ImmutableVector2D;
 import edu.colorado.phet.common.phetcommon.simsharing.Parameter;
+import edu.colorado.phet.common.phetcommon.simsharing.SimSharingEventArgs;
 import edu.colorado.phet.common.phetcommon.util.DoubleRange;
 import edu.colorado.phet.common.phetcommon.util.SimpleObserver;
 import edu.colorado.phet.common.phetcommon.util.function.Function0;
@@ -265,19 +266,19 @@ public class ElectronegativityControlNode extends PhetPNode {
 
             addInputEventListener( new CursorHandler() );
             addInputEventListener( new PaintHighlightHandler( this, THUMB_NORMAL_COLOR, THUMB_HIGHLIGHT_COLOR ) );
-            addInputEventListener( new ThumbDragHandler( MPSimSharing.OBJECT_ELECTRONEGATIVITY_CONTROL,
-                                                         new Function0<Parameter[]>() {
-                                                             public Parameter[] apply() {
-                                                                 return new Parameter[] { param( MPSimSharing.PARAM_ATOM, atom.getName() ), param( MPSimSharing.PARAM_ELECTRONEGATIVITY, atom.electronegativity.get() ) };
-                                                             }
-                                                         },
-                                                         molecule, relativeNode, trackNode, this, range, snapInterval,
+            addInputEventListener( new ThumbDragHandler( molecule, relativeNode, trackNode, this, range, snapInterval,
                                                          new VoidFunction1<Double>() {
                                                              public void apply( Double value ) {
                                                                  atom.electronegativity.set( value );
                                                              }
-                                                         }
-            ) );
+                                                         } ) {{
+                setSimSharingEventArgs( new SimSharingEventArgs( MPSimSharing.OBJECT_ELECTRONEGATIVITY_CONTROL,
+                                                                 new Function0<Parameter[]>() {
+                                                                     public Parameter[] apply() {
+                                                                         return new Parameter[] { param( MPSimSharing.PARAM_ATOM, atom.getName() ), param( MPSimSharing.PARAM_ELECTRONEGATIVITY, atom.electronegativity.get() ) };
+                                                                     }
+                                                                 } ) );
+            }} );
         }
     }
 
@@ -288,9 +289,8 @@ public class ElectronegativityControlNode extends PhetPNode {
         private final double snapInterval; // slider snaps to closet model value in this interval
 
         // see superclass for constructor params
-        public ThumbDragHandler( String object, Function0<Parameter[]> parameters,
-                                 Molecule2D molecule, PNode relativeNode, PNode trackNode, PNode thumbNode, DoubleRange range, double snapInterval, VoidFunction1<Double> updateFunction ) {
-            super( object, parameters, Orientation.HORIZONTAL, relativeNode, trackNode, thumbNode, range, updateFunction );
+        public ThumbDragHandler( Molecule2D molecule, PNode relativeNode, PNode trackNode, PNode thumbNode, DoubleRange range, double snapInterval, VoidFunction1<Double> updateFunction ) {
+            super( Orientation.HORIZONTAL, relativeNode, trackNode, thumbNode, range, updateFunction );
             this.molecule = molecule;
             this.snapInterval = snapInterval;
         }
